bpo-44589: raise SyntaxError when mapping pattern has duplicate key

* match case pattern cannot have duplicate keys per PEP 634.
* when duplicate literal values are present, a syntax error should be
  raised; not a runtime ValueError, which was the prior behavior.